[BUGFIX] Inline editable properties for documents not visible
When a property is inline editable directly on the document,
it's not visible in any way. Now a gray outline is displayed on
hover as well as a blue outline when focussed matching the behavior
of the content elements.

Releases: master, 1.1, 1.0
Fixes: NEOS-362
Original-Commit-Hash: 102c8ab282cfa6d192a38baabf8b416b427cc8a7

--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -10634,6 +10634,16 @@
   outline-offset: 6px;
 }
 
+.neos-inline-editable {
+  outline-offset: 6px;
+}
+.neos-inline-editable:hover {
+  outline: 2px solid rgba(0, 0, 0, 0.2);
+}
+.neos-inline-editable.aloha-editable-active {
+  outline: 2px solid #00b5ff !important;
+}
+
 button.neos-create-new-content {
   position: relative;
   z-index: 100;
